--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -8,6 +8,7 @@
     "@fontsource/anton": "^5.2.5",
     "@fontsource/montserrat": "^5.2.5",
     "@fontsource/orbitron": "^5.2.5",
+    "@fontsource/ubuntu": "^5.2.5",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "@testing-library/dom": "^10.4.0",
